--- a/schedule.css
+++ b/schedule.css
@@ -8,7 +8,7 @@
     align-items: center;
     overflow-x: auto;
     white-space: nowrap;
-    border-bottom: 1px solid #dddddd;
+    border-bottom: 1px solid #dddddd7e;
 }
 .qt-timeline-item {
     display: inline-block;
@@ -33,13 +33,13 @@
     line-height: 1.4;
 }
 .qt-timeline-item.highlight {
-    background: #f0f0f07e;
+    background: #f0f0f059;
     border-radius: 10px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
 }
 .qt-margin {
     height: 20px;
-    background-color: white;
+    background-color: whitesmoke;
 }
 .qt-hidden {
     display: none;
